[tool.poetry]
name = "quantnb"
version = "0.2.21"
description = ""
authors = ["Alpha <piotr@piotryordanov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.57.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
ta-lib = "^0.4.26"
matplotlib = "^3.7.1"
pyarrow = "^12.0.0"
mplfinance = "^0.12.9b7"
tqdm = "^4.65.0"

python-binance = {version = "^1.0.17", optional = true}
quantstats = {version = "^0.0.59", optional = true}
seaborn = {version = "^0.12.2", extras = ["stats"], optional = true}
ipython = {version = "^8.14.0", optional = true}
pandas-ta = {version = "^0.3.14b0", optional = true}
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
