[tool.poetry]
name = "quantbt"
version = "0.8.16"
description = ""
authors = ["Alpha <piotr@piotryordanov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numba = "^0.57.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
ta-lib = "^0.4.26"
matplotlib = "^3.7.1"
mplfinance = "^0.12.9b7"
prettytable = "^3.8.0"
pyarrow = "^13.0.0"
tqdm = "^4.65.0"
python-binance = "^1.0.17"
quantstats = "^0.0.59"
seaborn = "^0.12.2"

ipython = {version = "^8.14.0", optional = true}
pandas-ta = {version = "^0.3.14b0", optional = true}
pytest = {version="^7.4.0", optional = true}
pytest-watcher = {version ="^0.3.4", optional = true}
pyright =  {version ="^1.1.320", optional = true}
importlib-resources = {version ="^6.0.1", optional = true}
mkdocs-glightbox = {version ="^0.3.4", optional = true}
mkdocs-material = {version ="^9.2.8", optional = true}
mkdocs = {version ="^1.5.2", optional = true}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dev_tools = [
    "ipython",
    "pandas-ta",
]
tools = [
    "pytest",
    "pytest-watcher",
    "pyright",
    "importlib-resources",
]
mkdocs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox"
]

[tool.pytest-watcher]
now = true
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
pythonpath = "quantbt"
addopts = "-s"
testpaths = [
    "tests",
]

[tool.poe.tasks]
install = "poetry install --all-extras"
docs = "poetry run mkdocs serve"

